<resources>
    <string name="app_name">Blood Finder</string>
    <string name="default_loading_message">Loading, Please wait…</string>
    <string name="ok">OK</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="proceed">Proceed</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="please_fill_the_details_to_create_your_account">Please fill the following details to create your account</string>
    <string name="please_fill_the_details_to_complete_your_account_creation">Please fill the following details to complete your account creation</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="signing_up">Please Wait, Signing Up…</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_registered_email_address_to_continue">Please enter your registered email address to continue</string>
    <string name="success">Success</string>
    <string name="reset_sent_to_mail">An email with a password reset link has been sent to %s. Please follow the steps there to continue your password reset</string>
    <string name="email_does_not_exist_in_db">This email address has not been registered on the platform. Please check the email address and try again</string>
    <string name="email_cant_be_empty">Please input your email address</string>
    <string name="email_is_invalid">The email address imputed is invalid. Please check the email address and try again</string>
    <string name="email_exists">THe email address imputed is already in use by another account. Please proceed to log in or try with another email address</string>
    <string name="account_successfully_created">Your Account has been successfully created. Please proceed to sign in</string>
    <string name="account_hasnt_been_registered">The email address imputed hasn\'t been registered on the platform. Please check the email address or proceed to registration</string>
    <string name="password_in_invalid">Your password is incorrect. Please try again</string>
    <string name="account_has_been_disabled">Your account has been disabled by an administrator. Please contact the system administrator</string>
    <string name="too_many_sign_in_attempts">There have been too many unsuccessful attempts and your account has been temporarily disabled. Please try again later</string>
    <string name="user_type">User Type</string>
    <string name="marital_status">Marital Status</string>
    <string name="address">Address</string>
    <string name="verifying_credentials">Verifying Credentials…</string>
    <string name="saving_user_details">Saving User Details…</string>
    <string name="please_wait">Please Wait…</string>
    <string name="name_of_hospital">Name Of Hospital</string>
    <string name="name_of_blood_bank">Name Of Blood Bank</string>
    <string name="select_user_type">Please select user type</string>
    <string name="field_cant_be_empty">Field Can\'t be Empty</string>
    <string name="please_select_title">Please select your title</string>
    <string name="please_select_gender">Please select your gender</string>
    <string name="please_select_blood_type">Please select your blood type to continue</string>
    <string name="please_select_marital_status">Please select your marital status to continue</string>
    <string name="incomplete_phone_number">Incomplete phone number</string>
    <string name="logout">Logout</string>
    <string name="retrieving_account_details">Retrieving Account Details…</string>
    <string name="password_must_be_at_least_chars">Password must be at least 6 characters</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="in_progress_check_back_shortly">In Progress, Check Back Shortly</string>
    <string name="welcome_back_format">Welcome back,\n%s</string>
    <string name="what_would_you_like_to_do_today">What would you like to do today?</string>
    <string name="invalid_user_type">User type invalid / not found</string>
    <string name="enter">Enter</string>
    <string name="logout_from_the_app">Logout from the application</string>
    <string name="blood_availability">Blood Availability</string>
    <string name="view_list_or_add_new">View list or create new entry</string>
    <string name="cancel">Cancel</string>
    <string name="blood_type">Blood Type</string>
    <string name="upload_blood_availability">Upload Blood Availability</string>
    <string name="please_complete_the_form_below">Please complete the form below</string>
    <string name="billing_type">Billing Type</string>
    <string name="upload">Upload</string>
    <string name="form_was_not_completed">Form was not completed</string>
    <string name="uploading_blood_availability">Uploading Blood Availability…</string>
    <string name="here_are_your_active_blood_availability_postings">Here are your active blood availability postings</string>
    <string name="delete_blood_availability_posting">Delete blood availability posting</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this blood availability posting?</string>
    <string name="delete_posting">Delete Blood Posting</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="blood_request">Blood Request</string>
    <string name="find_nearest_blood_donor_or_private_blood_bank">Find nearest Blood Donor or Private Blood Bank</string>
    <string name="search">Search</string>
    <string name="blood_search_results">Blood Search Results</string>
    <string name="searching">Searching…</string>
    <string name="please_select_billing_type">Please select billing type to continue</string>
    <string name="blood_provider_not_found">Sorry, We couldn\'t find any blood posting that was compatible with your request</string>
    <string name="amount_of_blood_results_found_format">We found %d blood postings that are compatible with your request</string>
    <string name="call">Call</string>
    <string name="select">Select</string>
    <string name="select_location">Select Location</string>
    <string name="select_this_location">Select This Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="close">Close</string>
    <string name="move_map_around_message">Please move the map around so the red marker is on your home location. \nYou can click the icon on the right side of the toolbar to reset the map icon to your current location.</string>
    <string name="my_location">My Location</string>
    <string name="location_permission_not_given_error">Hi!\nTo get your current location, we need your permission. Kindly click on proceed to give us your permission.</string>
    <string name="current_location_getting_error">An error was encountered while trying to get your location. Please wait for a little before trying again</string>
    <string name="try_again">Try Again</string>
    <string name="saving_user_location">Saving User Location…</string>
    <string name="save_selected_location">Save Selected Location</string>
    <string name="save_selected_location_message">Are you sure you want to save the selected location?</string>
    <string name="distance">Distance</string>
    <string name="default_notification_channel_id">general_channel</string>
    <string name="blood_posting_details">Blood Posting Details</string>
    <string name="fetching_donor_data">Fetching donor details…</string>
    <string name="user_details">User Details</string>
    <string name="select_this_donor">Select this Donor</string>
    <string name="uploading_blood_request">Uploading Blood Request…</string>
    <string name="notifying_blood_provider">Notifying Blood Provider…</string>
    <string name="blood_request_channel">Blood Request Channel</string>
    <string name="blood_request_channel_description">This channel handles sending notifications about blood requests to blood providers</string>
    <string name="blood_answer_channel">Blood Response Channel</string>
    <string name="blood_answer_channel_description">This channel handles sending notifications about blood responses to blood seekers</string>
    <string name="donation_request">Donation Request</string>
    <string name="blood_requested_successfully">Blood Requested Successfully</string>
    <string name="donation_details">Donation Details</string>
    <string name="blood_seeker_name">Blood Seeker Name</string>
    <string name="blood_seeker_address">Blood Seeker Address</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="blood_request_message_format">Hello %s, You have received a blood donation request from %s. You need to decide whether to accept or decline the request. Kindly reply as soon as possible so that they would be able to take further action</string>
    <string name="blood_response_message_format">Hello %s, Your blood donation request has been %s by %s. %s</string>
    <string name="blood_seeker_phone_number">Blood Seeker Phone Number</string>
    <string name="fetching_seeker_data">Fetching Blood Seeker Details…</string>
    <string name="accept_request">Accept Request</string>
    <string name="accept_request_message">Are you sure you want to accept this blood request?</string>
    <string name="decline_request">Decline Request</string>
    <string name="decline_request_message">Are you sure you want to decline this blood request?</string>
    <string name="accepting_request">Accepting Request…</string>
    <string name="declining_request">Declining Request…</string>
    <string name="notifying_blood_seeker">Notifying Blood Seeker…</string>
    <string name="view_directions">View Directions</string>
    <string name="blood_provider_name">Blood Provider Name</string>
    <string name="blood_provider_address">Blood Provider Address</string>
    <string name="blood_provider_phone_number">Blood Provider Phone Number</string>
    <string name="fetching_provider_data">Fetching Blood Provider Data…</string>
    <string name="blood_request_accepted_message">You can view the directions to the blood provider\'s location by clicking the button below.</string>
    <string name="blood_request_declined_message">Please go back to search and try another blood donor or private blood bank.</string>
    <string name="blood_posting_response_message_format">The blood request has been %s and your response has been sent to %s. %s</string>
    <string name="blood_donor_posting_delete_message">\nAlso, your blood posting has been taken down.</string>
    <string name="view_your_profile">View Your Profile</string>
    <string name="request_history">Request History</string>
    <string name="view_your_blood_request_history">View Your Blood Request History</string>
    <string name="getting_request_history">Fetching Request History…</string>
    <string name="status">Status</string>
    <string name="donation_history">Donation History</string>
    <string name="view_your_blood_donation_history">View Your Blood Donation History</string>
    <string name="fetching_donation_history">Fetching Donation History…</string>
</resources>