<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.efedaniel.bloodfinder.bloodfinder.notifications.bloodPostingResponse.BloodPostingResponseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".bloodfinder.notifications.bloodPostingResponse.BloodPostingResponseFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/greetingCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bloodRequestMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/muli"
                android:lineSpacingExtra="1.5dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/blood_response_message_format" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/donationDetailsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greetingCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/muli_bold"
                    android:text="@string/donation_details"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/muli_light"
                    android:text="@string/blood_provider_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/bloodProviderNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    tools:text="Efe Personal Blood Bank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/muli_light"
                    android:text="@string/blood_provider_address"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/bloodProviderAddressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    tools:text="White House, Obafemi Awolowo University" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/muli_light"
                    android:text="@string/blood_provider_phone_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/phoneNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/muli_bold"
                    android:paddingStart="16dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    tools:text="08146067031" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/muli_light"
                    android:text="@string/billing_type"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/billingTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    tools:text="Free Donation" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewRouteButton"
            style="@style/AppTheme.ButtonAppearance"
            android:layout_width="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/view_directions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donationDetailsCardView"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>